@@ -35,7 +35,9 @@ Show differences between the BMC and a config file.
 Specify a PEF config file for PEF checkout/commit/diff.
 .TP
 \fB\-k\fR "KEY=VALUE", \fB\-\-key\-pair=\fR"KEY=VALUE"
-Specify KEY=VALUE pairs for checkout/commit/diff.  This option can be used multiple times.
+Specify KEY=VALUE pairs for checkout/commit/diff.  This option can be
+used multiple times.  On commit, any KEY=VALUE pairs will overwrite
+any pairs specified in a file with \fB\-\-filename\fR.
 .TP
 \fB\-S\fR "SECTION", \fB\-\-section=\fR"SECTION"
 Specify a SECTION for checkout.  This option can be used multiple times.
